# signeitory

./: .env.example  .gitignore  .manifest.json  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  release.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yaml  code.yaml  convention.yaml  deploy.yaml  lint.yaml  merge.yaml  release.yaml  test.yaml
example/: table.csv
src/: app.py  main.py  window.py
src/config/: metadata.py
src/logic/: example.py  write.py
src/pages/: help.py  home.py  settings.py
src/services/: write.py
src/utils/: config.py  constants.py  data_saver.py  file_loader.py  loader.py  logger.py  system_tray.py
test/: app_test.py  window_test.py
