[project]
name = "app"
dynamic = ["version"]
requires-python = "~=3.11"
dependencies = [
    "pyside6==6.9.0",
    "pyside6-fluent-widgets==1.8.1",
    "loguru==0.7.3",
    "openpyxl==3.1.5",
    "types-openpyxl==3.1.5.20250602",
    "pymupdf==1.26.0",
]

[project.optional-dependencies]
lint = ["mypy==1.16.0", "ruff==0.11.13", "pre-commit==4.2.0"]
test = ["pytest==8.4.0", "pytest-qt==4.4.0", "pytest-xvfb==3.1.1"]
build = ["nuitka==2.7.7", "imageio==2.37.0"]

[tool.mypy]
strict = false
follow_untyped_imports = true
check_untyped_defs = true

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"window.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
qt_qapp_name = "Test"
addopts = "-ra"
testpaths = ["test"]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["*Test", "test*"]
